fix: Summarize OCDS Merge warnings, as they are too large to store
Used this script to manually migrate the notes:

import re
from collections import Counter
from data_registry.models import Job
OCDS_MERGE_WARNING_PATTERN = re.compile(
    r"^Multiple objects have the `id` value '.+' in the `(.+)` array$", re.MULTILINE
)
for job in Job.objects.exclude(process_notes={}).defer("process_notes"):
    counts = Counter()
    others = []
    for note, data in job.process_notes['WARNING']:
        # OCDS Merge has one warning type, which can be issued millions of times.
        if note.startswith("Multiple objects have the `id` value "):
            counts.update(OCDS_MERGE_WARNING_PATTERN.findall(note))
        else:
            others.append([note, data])
    if not counts:
        continue
    for path, count in counts.items():
        others.append(["OCDS Merge", {"count": count, "path": path}])
    job.process_notes['WARNING'] = others
    job.save(update_fields=["modified", "process_notes"])
    print(job)

--- a/data_registry/static/admin.css
+++ b/data_registry/static/admin.css
@@ -5,3 +5,7 @@
     */
      white-space: normal;
 }
+
+.ms-0 {
+    margin-left: 0 !important;
+}
